# GradAttack

./: .gitignore  CONTRIBUTE.md  LICENSE  README.md  requirements.txt  setup.cfg
.github/workflows/: python-test.yml
examples/: attack_cifar100_gradinversion.py  attack_cifar10_gradinversion.py  attack_decode.py  calc_metric.py  train_cifar.py  train_cifar10.py
examples/bashes/: attack_cifar10_bashes.md  calc_metric_bashes.md  train_cifar10_bashes.md
gradattack/: datamodules.py  trainingpipeline.py  utils.py
gradattack/attacks/: attack.py  gradientinversion.py
gradattack/defenses/: __init__.py  defense.py  defense_utils.py  dpsgd.py  gradprune.py  instahide.py  mixup.py
gradattack/metrics/: gradients.py  pixelwise.py
gradattack/models/: LeNet.py  __init__.py  alldnet.py  covidmodel.py  densenet.py  googlenet.py  mobilenet.py  multihead_resnet.py  nasnet.py  resnet.py  resnext.py  simple.py  vgg.py
papers/: gradient_inversion.md
test/: test_attack.py  test_defenses.py  test_pipeline.py  train_config.py  utils.py
