[metadata]
name = GradAttack
version = 0.1.1
author = "Yangsibo Huang <yangsibo@princeton.edu>, Samyak Gupta <samyakg@princeton.edu"
author_email = "samyakg@princeton.edu"
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Princeton-SysML/GradAttack
project_urls =
    Bug Tracker = https://github.com/Princeton-SysML/GradAttack/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    colorama==0.4.4
    matplotlib==3.4.3
    numpy==1.21.4
    opacus==0.14.0
    pytorch_lightning==1.3.1
    scikit_learn==1.0.1
    torch==1.8.1
    torchcsprng==0.2.1
    torchmetrics==0.6.0
    torchvision==0.9.1
